# doxygenai

./: .gitignore  AUTODOCS_SUMMARY.md  Doxyfile  README.md  content.dox  generate_docs.py  requirements.txt
.github/workflows/: main.yml
Project_Flies/: CMakeLists.txt
Project_Flies/include/: adminLogin.h  facultyLogin.h
Project_Flies/src/: main.cpp
docs/html/: admin_login_8h.html  admin_login_8h.js  admin_login_8h__dep__incl.map  admin_login_8h__dep__incl.md5  admin_login_8h__incl.map  admin_login_8h__incl.md5  admin_login_8h_a441ea9843cdeda9e3c6e7377941d820c_icgraph.map  admin_login_8h_a441ea9843cdeda9e3c6e7377941d820c_icgraph.md5  admin_login_8h_a47d6c176acd705279f26abe7a124a790_cgraph.map  admin_login_8h_a47d6c176acd705279f26abe7a124a790_cgraph.md5  admin_login_8h_a47d6c176acd705279f26abe7a124a790_icgraph.map  admin_login_8h_a47d6c176acd705279f26abe7a124a790_icgraph.md5  admin_login_8h_a5ad60f129a08d36911b9c3e2690b5d47_icgraph.map  admin_login_8h_a5ad60f129a08d36911b9c3e2690b5d47_icgraph.md5  admin_login_8h_ac9ca3061b99476a9cce0a13abbe12615_icgraph.map  admin_login_8h_ac9ca3061b99476a9cce0a13abbe12615_icgraph.md5  admin_login_8h_source.html  annotated.html  annotated_dup.js  classadmin-members.html  classadmin.html  classadmin.js  classadmin_a12a71ee0e0641ca0a2274aa5abc52d1d_cgraph.map  classadmin_a12a71ee0e0641ca0a2274aa5abc52d1d_cgraph.md5  classadmin_a12a71ee0e0641ca0a2274aa5abc52d1d_icgraph.map  classadmin_a12a71ee0e0641ca0a2274aa5abc52d1d_icgraph.md5  classadmin_a1a0b8b18e142218f796a2b159ef2cae1_cgraph.map  (+1608 more)
docs/latest/: graph_legend.html
(+57 files in other folders)
